--- a/solution/ng2-api/ng2-api.csproj
+++ b/solution/ng2-api/ng2-api.csproj
@@ -156,8 +156,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\CarsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NG2_CarsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -167,14 +167,27 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\about.component.html" />
+    <Content Include="app\about.component.js" />
+    <Content Include="app\app.component.html" />
+    <Content Include="app\app.component.js" />
+    <Content Include="app\app.module.js" />
+    <Content Include="app\app.routing.js" />
+    <Content Include="app\cars\car-detail.component.html" />
+    <Content Include="app\cars\car-detail.component.js" />
+    <Content Include="app\cars\car-edit.component.js" />
+    <Content Include="app\cars\car-form.component.html" />
+    <Content Include="app\cars\car-form.component.js" />
+    <Content Include="app\cars\car.js" />
+    <Content Include="app\cars\car.service.js" />
+    <Content Include="app\cars\cars-list.component.html" />
+    <Content Include="app\cars\cars-list.component.js" />
+    <Content Include="app\cars\cars.module.js" />
+    <Content Include="app\cars\cars.routing.js" />
+    <Content Include="app\main.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
     <Content Include="Areas\HelpPage\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\ResourceModel.cshtml" />
@@ -194,12 +207,225 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
-    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="node_modules\%40angular\common\bundles\common.umd.min.js" />
+    <Content Include="node_modules\%40angular\compiler\bundles\compiler.umd.min.js" />
+    <Content Include="node_modules\%40angular\core\bundles\core.umd.min.js" />
+    <Content Include="node_modules\%40angular\forms\bundles\forms.umd.min.js" />
+    <Content Include="node_modules\%40angular\http\bundles\http.umd.min.js" />
+    <Content Include="node_modules\%40angular\platform-browser-dynamic\bundles\platform-browser-dynamic.umd.min.js" />
+    <Content Include="node_modules\%40angular\platform-browser\bundles\platform-browser.umd.min.js" />
+    <Content Include="node_modules\%40angular\router\bundles\router.umd.min.js" />
+    <Content Include="node_modules\bootstrap\dist\css\bootstrap-theme.min.css" />
+    <Content Include="node_modules\bootstrap\dist\css\bootstrap.min.css" />
+    <Content Include="node_modules\bootstrap\dist\js\bootstrap.min.js" />
+    <Content Include="node_modules\core-js\client\shim.min.js" />
+    <Content Include="node_modules\jquery\dist\jquery.min.js" />
+    <Content Include="node_modules\rxjs\add\operator\catch.js" />
+    <Content Include="node_modules\rxjs\add\operator\map.js" />
+    <Content Include="node_modules\rxjs\add\operator\switchMap.js" />
+    <Content Include="node_modules\rxjs\add\operator\toPromise.js" />
+    <Content Include="node_modules\rxjs\AsyncSubject.js" />
+    <Content Include="node_modules\rxjs\BehaviorSubject.js" />
+    <Content Include="node_modules\rxjs\InnerSubscriber.js" />
+    <Content Include="node_modules\rxjs\Notification.js" />
+    <Content Include="node_modules\rxjs\Observable.js" />
+    <Content Include="node_modules\rxjs\observable\ArrayLikeObservable.js" />
+    <Content Include="node_modules\rxjs\observable\ArrayObservable.js" />
+    <Content Include="node_modules\rxjs\observable\bindCallback.js" />
+    <Content Include="node_modules\rxjs\observable\bindNodeCallback.js" />
+    <Content Include="node_modules\rxjs\observable\BoundCallbackObservable.js" />
+    <Content Include="node_modules\rxjs\observable\BoundNodeCallbackObservable.js" />
+    <Content Include="node_modules\rxjs\observable\combineLatest.js" />
+    <Content Include="node_modules\rxjs\observable\concat.js" />
+    <Content Include="node_modules\rxjs\observable\ConnectableObservable.js" />
+    <Content Include="node_modules\rxjs\observable\defer.js" />
+    <Content Include="node_modules\rxjs\observable\DeferObservable.js" />
+    <Content Include="node_modules\rxjs\observable\dom\ajax.js" />
+    <Content Include="node_modules\rxjs\observable\dom\AjaxObservable.js" />
+    <Content Include="node_modules\rxjs\observable\dom\webSocket.js" />
+    <Content Include="node_modules\rxjs\observable\dom\WebSocketSubject.js" />
+    <Content Include="node_modules\rxjs\observable\empty.js" />
+    <Content Include="node_modules\rxjs\observable\EmptyObservable.js" />
+    <Content Include="node_modules\rxjs\observable\ErrorObservable.js" />
+    <Content Include="node_modules\rxjs\observable\forkJoin.js" />
+    <Content Include="node_modules\rxjs\observable\ForkJoinObservable.js" />
+    <Content Include="node_modules\rxjs\observable\from.js" />
+    <Content Include="node_modules\rxjs\observable\fromEvent.js" />
+    <Content Include="node_modules\rxjs\observable\FromEventObservable.js" />
+    <Content Include="node_modules\rxjs\observable\fromEventPattern.js" />
+    <Content Include="node_modules\rxjs\observable\FromEventPatternObservable.js" />
+    <Content Include="node_modules\rxjs\observable\FromObservable.js" />
+    <Content Include="node_modules\rxjs\observable\fromPromise.js" />
+    <Content Include="node_modules\rxjs\observable\GenerateObservable.js" />
+    <Content Include="node_modules\rxjs\observable\if.js" />
+    <Content Include="node_modules\rxjs\observable\IfObservable.js" />
+    <Content Include="node_modules\rxjs\observable\interval.js" />
+    <Content Include="node_modules\rxjs\observable\IntervalObservable.js" />
+    <Content Include="node_modules\rxjs\observable\IteratorObservable.js" />
+    <Content Include="node_modules\rxjs\observable\merge.js" />
+    <Content Include="node_modules\rxjs\observable\never.js" />
+    <Content Include="node_modules\rxjs\observable\NeverObservable.js" />
+    <Content Include="node_modules\rxjs\observable\of.js" />
+    <Content Include="node_modules\rxjs\observable\pairs.js" />
+    <Content Include="node_modules\rxjs\observable\PairsObservable.js" />
+    <Content Include="node_modules\rxjs\observable\PromiseObservable.js" />
+    <Content Include="node_modules\rxjs\observable\range.js" />
+    <Content Include="node_modules\rxjs\observable\RangeObservable.js" />
+    <Content Include="node_modules\rxjs\observable\ScalarObservable.js" />
+    <Content Include="node_modules\rxjs\observable\SubscribeOnObservable.js" />
+    <Content Include="node_modules\rxjs\observable\throw.js" />
+    <Content Include="node_modules\rxjs\observable\timer.js" />
+    <Content Include="node_modules\rxjs\observable\TimerObservable.js" />
+    <Content Include="node_modules\rxjs\observable\using.js" />
+    <Content Include="node_modules\rxjs\observable\UsingObservable.js" />
+    <Content Include="node_modules\rxjs\observable\zip.js" />
+    <Content Include="node_modules\rxjs\Observer.js" />
+    <Content Include="node_modules\rxjs\Operator.js" />
+    <Content Include="node_modules\rxjs\operator\audit.js" />
+    <Content Include="node_modules\rxjs\operator\auditTime.js" />
+    <Content Include="node_modules\rxjs\operator\buffer.js" />
+    <Content Include="node_modules\rxjs\operator\bufferCount.js" />
+    <Content Include="node_modules\rxjs\operator\bufferTime.js" />
+    <Content Include="node_modules\rxjs\operator\bufferToggle.js" />
+    <Content Include="node_modules\rxjs\operator\bufferWhen.js" />
+    <Content Include="node_modules\rxjs\operator\catch.js" />
+    <Content Include="node_modules\rxjs\operator\combineAll.js" />
+    <Content Include="node_modules\rxjs\operator\combineLatest.js" />
+    <Content Include="node_modules\rxjs\operator\concat.js" />
+    <Content Include="node_modules\rxjs\operator\concatAll.js" />
+    <Content Include="node_modules\rxjs\operator\concatMap.js" />
+    <Content Include="node_modules\rxjs\operator\concatMapTo.js" />
+    <Content Include="node_modules\rxjs\operator\count.js" />
+    <Content Include="node_modules\rxjs\operator\debounce.js" />
+    <Content Include="node_modules\rxjs\operator\debounceTime.js" />
+    <Content Include="node_modules\rxjs\operator\defaultIfEmpty.js" />
+    <Content Include="node_modules\rxjs\operator\delay.js" />
+    <Content Include="node_modules\rxjs\operator\delayWhen.js" />
+    <Content Include="node_modules\rxjs\operator\dematerialize.js" />
+    <Content Include="node_modules\rxjs\operator\distinct.js" />
+    <Content Include="node_modules\rxjs\operator\distinctUntilChanged.js" />
+    <Content Include="node_modules\rxjs\operator\distinctUntilKeyChanged.js" />
+    <Content Include="node_modules\rxjs\operator\do.js" />
+    <Content Include="node_modules\rxjs\operator\elementAt.js" />
+    <Content Include="node_modules\rxjs\operator\every.js" />
+    <Content Include="node_modules\rxjs\operator\exhaust.js" />
+    <Content Include="node_modules\rxjs\operator\exhaustMap.js" />
+    <Content Include="node_modules\rxjs\operator\expand.js" />
+    <Content Include="node_modules\rxjs\operator\filter.js" />
+    <Content Include="node_modules\rxjs\operator\finally.js" />
+    <Content Include="node_modules\rxjs\operator\find.js" />
+    <Content Include="node_modules\rxjs\operator\findIndex.js" />
+    <Content Include="node_modules\rxjs\operator\first.js" />
+    <Content Include="node_modules\rxjs\operator\groupBy.js" />
+    <Content Include="node_modules\rxjs\operator\ignoreElements.js" />
+    <Content Include="node_modules\rxjs\operator\isEmpty.js" />
+    <Content Include="node_modules\rxjs\operator\last.js" />
+    <Content Include="node_modules\rxjs\operator\let.js" />
+    <Content Include="node_modules\rxjs\operator\map.js" />
+    <Content Include="node_modules\rxjs\operator\mapTo.js" />
+    <Content Include="node_modules\rxjs\operator\materialize.js" />
+    <Content Include="node_modules\rxjs\operator\max.js" />
+    <Content Include="node_modules\rxjs\operator\merge.js" />
+    <Content Include="node_modules\rxjs\operator\mergeAll.js" />
+    <Content Include="node_modules\rxjs\operator\mergeMap.js" />
+    <Content Include="node_modules\rxjs\operator\mergeMapTo.js" />
+    <Content Include="node_modules\rxjs\operator\mergeScan.js" />
+    <Content Include="node_modules\rxjs\operator\min.js" />
+    <Content Include="node_modules\rxjs\operator\multicast.js" />
+    <Content Include="node_modules\rxjs\operator\observeOn.js" />
+    <Content Include="node_modules\rxjs\operator\onErrorResumeNext.js" />
+    <Content Include="node_modules\rxjs\operator\pairwise.js" />
+    <Content Include="node_modules\rxjs\operator\partition.js" />
+    <Content Include="node_modules\rxjs\operator\pluck.js" />
+    <Content Include="node_modules\rxjs\operator\publish.js" />
+    <Content Include="node_modules\rxjs\operator\publishBehavior.js" />
+    <Content Include="node_modules\rxjs\operator\publishLast.js" />
+    <Content Include="node_modules\rxjs\operator\publishReplay.js" />
+    <Content Include="node_modules\rxjs\operator\race.js" />
+    <Content Include="node_modules\rxjs\operator\reduce.js" />
+    <Content Include="node_modules\rxjs\operator\repeat.js" />
+    <Content Include="node_modules\rxjs\operator\repeatWhen.js" />
+    <Content Include="node_modules\rxjs\operator\retry.js" />
+    <Content Include="node_modules\rxjs\operator\retryWhen.js" />
+    <Content Include="node_modules\rxjs\operator\sample.js" />
+    <Content Include="node_modules\rxjs\operator\sampleTime.js" />
+    <Content Include="node_modules\rxjs\operator\scan.js" />
+    <Content Include="node_modules\rxjs\operator\sequenceEqual.js" />
+    <Content Include="node_modules\rxjs\operator\share.js" />
+    <Content Include="node_modules\rxjs\operator\single.js" />
+    <Content Include="node_modules\rxjs\operator\skip.js" />
+    <Content Include="node_modules\rxjs\operator\skipUntil.js" />
+    <Content Include="node_modules\rxjs\operator\skipWhile.js" />
+    <Content Include="node_modules\rxjs\operator\startWith.js" />
+    <Content Include="node_modules\rxjs\operator\subscribeOn.js" />
+    <Content Include="node_modules\rxjs\operator\switch.js" />
+    <Content Include="node_modules\rxjs\operator\switchMap.js" />
+    <Content Include="node_modules\rxjs\operator\switchMapTo.js" />
+    <Content Include="node_modules\rxjs\operator\take.js" />
+    <Content Include="node_modules\rxjs\operator\takeLast.js" />
+    <Content Include="node_modules\rxjs\operator\takeUntil.js" />
+    <Content Include="node_modules\rxjs\operator\takeWhile.js" />
+    <Content Include="node_modules\rxjs\operator\throttle.js" />
+    <Content Include="node_modules\rxjs\operator\throttleTime.js" />
+    <Content Include="node_modules\rxjs\operator\timeInterval.js" />
+    <Content Include="node_modules\rxjs\operator\timeout.js" />
+    <Content Include="node_modules\rxjs\operator\timeoutWith.js" />
+    <Content Include="node_modules\rxjs\operator\timestamp.js" />
+    <Content Include="node_modules\rxjs\operator\toArray.js" />
+    <Content Include="node_modules\rxjs\operator\toPromise.js" />
+    <Content Include="node_modules\rxjs\operator\window.js" />
+    <Content Include="node_modules\rxjs\operator\windowCount.js" />
+    <Content Include="node_modules\rxjs\operator\windowTime.js" />
+    <Content Include="node_modules\rxjs\operator\windowToggle.js" />
+    <Content Include="node_modules\rxjs\operator\windowWhen.js" />
+    <Content Include="node_modules\rxjs\operator\withLatestFrom.js" />
+    <Content Include="node_modules\rxjs\operator\zip.js" />
+    <Content Include="node_modules\rxjs\operator\zipAll.js" />
+    <Content Include="node_modules\rxjs\OuterSubscriber.js" />
+    <Content Include="node_modules\rxjs\ReplaySubject.js" />
+    <Content Include="node_modules\rxjs\Rx.js" />
+    <Content Include="node_modules\rxjs\Scheduler.js" />
+    <Content Include="node_modules\rxjs\Subject.js" />
+    <Content Include="node_modules\rxjs\SubjectSubscription.js" />
+    <Content Include="node_modules\rxjs\Subscriber.js" />
+    <Content Include="node_modules\rxjs\Subscription.js" />
+    <Content Include="node_modules\rxjs\symbol\iterator.js" />
+    <Content Include="node_modules\rxjs\symbol\observable.js" />
+    <Content Include="node_modules\rxjs\symbol\rxSubscriber.js" />
+    <Content Include="node_modules\rxjs\util\AnimationFrame.js" />
+    <Content Include="node_modules\rxjs\util\applyMixins.js" />
+    <Content Include="node_modules\rxjs\util\ArgumentOutOfRangeError.js" />
+    <Content Include="node_modules\rxjs\util\assign.js" />
+    <Content Include="node_modules\rxjs\util\EmptyError.js" />
+    <Content Include="node_modules\rxjs\util\errorObject.js" />
+    <Content Include="node_modules\rxjs\util\FastMap.js" />
+    <Content Include="node_modules\rxjs\util\Immediate.js" />
+    <Content Include="node_modules\rxjs\util\isArray.js" />
+    <Content Include="node_modules\rxjs\util\isDate.js" />
+    <Content Include="node_modules\rxjs\util\isFunction.js" />
+    <Content Include="node_modules\rxjs\util\isNumeric.js" />
+    <Content Include="node_modules\rxjs\util\isObject.js" />
+    <Content Include="node_modules\rxjs\util\isPromise.js" />
+    <Content Include="node_modules\rxjs\util\isScheduler.js" />
+    <Content Include="node_modules\rxjs\util\Map.js" />
+    <Content Include="node_modules\rxjs\util\MapPolyfill.js" />
+    <Content Include="node_modules\rxjs\util\noop.js" />
+    <Content Include="node_modules\rxjs\util\not.js" />
+    <Content Include="node_modules\rxjs\util\ObjectUnsubscribedError.js" />
+    <Content Include="node_modules\rxjs\util\root.js" />
+    <Content Include="node_modules\rxjs\util\Set.js" />
+    <Content Include="node_modules\rxjs\util\subscribeToResult.js" />
+    <Content Include="node_modules\rxjs\util\TimeoutError.js" />
+    <Content Include="node_modules\rxjs\util\toSubscriber.js" />
+    <Content Include="node_modules\rxjs\util\tryCatch.js" />
+    <Content Include="node_modules\rxjs\util\UnsubscriptionError.js" />
+    <Content Include="node_modules\systemjs\dist\system.js" />
+    <Content Include="node_modules\zone.js\dist\zone.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="styles.css" />
+    <Content Include="systemjs.config.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -208,20 +434,15 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
-    <Content Include="Content\Site.css" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
