--- a/solution/ng2-api/Web.config
+++ b/solution/ng2-api/Web.config
@@ -65,6 +65,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ng2Context" connectionString="data source=b04sqld50\jheadev8r2;initial catalog=dbbtCARSAp1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="ng2Context2" connectionString="data source=b04sqld50\jheadev8r2;initial catalog=dbbtCARSAp1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ng2Context" connectionString="data source=mahikero01-lap\sqlexpress;initial catalog=dbbtCARSAp1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+</connectionStrings>
 </configuration>
