--- a/solution/ng2-api/Web.config
+++ b/solution/ng2-api/Web.config
@@ -67,5 +67,14 @@
   <connectionStrings>
     <add name="ng2Context" connectionString="data source=b04sqld50\jheadev8r2;initial catalog=dbbtCARSAp1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="ng2Context2" connectionString="data source=mahikero01-lap\sqlexpress;initial catalog=dbbtCARSAp1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-</connectionStrings>
+  </connectionStrings>
+  <system.webServer>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+    </staticContent>
+  </system.webServer>
 </configuration>
