fixed Download function

--- a/solution/ng2-api/ng2-api.csproj
+++ b/solution/ng2-api/ng2-api.csproj
@@ -200,6 +200,7 @@
     <Content Include="app\main.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="favicon.ico" />
+    <Content Include="FileSaver.min.js" />
     <Content Include="Global.asax" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
     <Content Include="Areas\HelpPage\Views\Shared\_Layout.cshtml" />
