update upload functionality

--- a/solution/ng2-api/Web.config
+++ b/solution/ng2-api/Web.config
@@ -68,7 +68,16 @@
     <add name="ng2Context" connectionString="data source=b04sqld50\jheadev8r2;initial catalog=dbbtCARSAp1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="ng2Context2" connectionString="data source=mahikero01-lap\sqlexpress;initial catalog=dbbtCARSAp1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
+
   <system.webServer>
+    <security>
+      
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="3000000000" />
+      </requestFiltering>
+     
+    </security>
     <staticContent>
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
