--- a/solution/ng2-api/ng2-api.csproj
+++ b/solution/ng2-api/ng2-api.csproj
@@ -195,12 +195,17 @@
     <Content Include="app\file\file.js" />
     <Content Include="app\file\file.module.js" />
     <Content Include="app\file\file.routing.js" />
-    <Content Include="app\file\upload.component.html" />
-    <Content Include="app\file\upload.component.js" />
+    <Content Include="app\file\upload\upload-main.component.html" />
+    <Content Include="app\file\upload\upload-multiple.component.html" />
+    <Content Include="app\file\upload\upload-multiple.component.js" />
+    <Content Include="app\file\upload\upload-queue.component.html" />
+    <Content Include="app\file\upload\upload-queue.component.js" />
+    <Content Include="app\file\upload\upload-single.component.html" />
+    <Content Include="app\file\upload\upload-single.component.js" />
+    <Content Include="app\file\upload\upload.component.js" />
     <Content Include="app\main.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="favicon.ico" />
-    <Content Include="FileSaver.min.js" />
     <Content Include="Global.asax" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
     <Content Include="Areas\HelpPage\Views\Shared\_Layout.cshtml" />
